Fix z-index issues

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,6 +15,7 @@
   radial-gradient($vintage 10%, transparent 10%);
   background-size: 20px 20px;
   background-position: 0 0, 10px 10px;
+  z-index: 3;
 
 
 }
